dev - Started development of 0.1.2.28
---

Type: dev
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-27 (3.1.27.53-0.1.2.28-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Tue, 11 Nov 2025 15:02:24 +0300
+
 nitrocid-27 (3.1.27.53-0.1.2.27-1) noble; urgency=medium
 
   * General improvements and bug fixes
