--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-We've released this version to make localization faster.
+We've released this version to incorporate general improvements related to the support window.
 
 ### Changes
 
