--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nitrocid-25 (3.0.25.525-0.1.0.64-1) noble; urgency=medium
+
+  * General improvements and bug fixes
+
+ -- Aptivi CEO <ceo@aptivi.anonaddy.com>  Tue, 18 Nov 2025 15:36:43 +0300
+
 nitrocid-25 (3.0.25.525-0.1.0.63-1) noble; urgency=medium
 
   * Migrated the framework to .NET 10.0
