--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/eng.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/eng.json
@@ -415,6 +415,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Color schemes from Zorin OS, an unofficial spinoff of a popular Linux operating system, Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Raspberry colors"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Colors from the Nitrocid KS logo (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Colors from the Nitrocid KS logo (2022-2024)"
     }
   ]
 }
