--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/enk.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/enk.json
@@ -308,6 +308,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Colour schemes from Zorin OS, an unofficial spinoff of a popular Linux operating system, Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Raspberry colours"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Colours from the Nitrocid KS logo (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Colours from the Nitrocid KS logo (2022-2024)"
     }
   ]
 }
