--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/fre.json
@@ -355,6 +355,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Schémas de couleurs de Zorin OS, un spin-off non officiel d'un système d'exploitation Linux populaire, Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Couleurs framboise"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Couleurs du logo Nitrocid KS (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Couleurs du logo Nitrocid KS (2022-2024)"
     }
   ]
 }
