--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ndo.json
@@ -309,6 +309,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Skema warna dari Zorin OS, spin-off tidak resmi dari sistem operasi Linux populer, Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Warna Raspberry"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Warna dari logo Nitrocid KS (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Warna dari logo Nitrocid KS (2022-2024)"
     }
   ]
 }
