--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/rmn.json
@@ -310,6 +310,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Scheme de culori de la Zorin OS, un spin-off neoficial al unui sistem de operare Linux popular, Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Culori zmeură"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Culori din sigla Nitrocid KS (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Culori din sigla Nitrocid KS (2022-2024)"
     }
   ]
 }
