--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ukr.json
@@ -309,6 +309,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Схеми кольорів від Zorin OS, неофіційного допоміжного продукту популярної операційної системи Linux Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Малинові кольори"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Кольори з логотипу Nitrocid KS (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Кольори з логотипу Nitrocid KS (2022-2024)"
     }
   ]
 }
