--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.ar.resx
@@ -345,5 +345,14 @@
   <data name="NKS_THEMEPACKS_THEME_DESC_ZORINOS" xml:space="preserve">
     <value>مخططات الألوان من Zorin OS، وهو نظام تشغيل غير رسمي لنظام التشغيل Linux الشهير، Ubuntu</value>
   </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_RASPBERRY" xml:space="preserve">
+    <value>ألوان توت العليق</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2021" xml:space="preserve">
+    <value>ألوان شعار نيتروسيد كي إس (٢٠٢١-٢٠٢٢)</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2022" xml:space="preserve">
+    <value>ألوان شعار نيتروسيد كي إس (٢٠٢٢-٢٠٢٤)</value>
+  </data>
 
 </root>
