--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.ga.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.ga.resx
@@ -345,5 +345,14 @@
   <data name="NKS_THEMEPACKS_THEME_DESC_ZORINOS" xml:space="preserve">
     <value>Scéimeanna datha ó Zorin OS, toradh neamhoifigiúil de chóras oibriúcháin Linux coitianta, Ubuntu</value>
   </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_RASPBERRY" xml:space="preserve">
+    <value>Dathanna sú craobh</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2021" xml:space="preserve">
+    <value>Dathanna ó lógó Nitrocid KS (2021-2022)</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2022" xml:space="preserve">
+    <value>Dathanna ó lógó Nitrocid KS (2022-2024)</value>
+  </data>
 
 </root>
