--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.hi.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.hi.resx
@@ -345,5 +345,14 @@
   <data name="NKS_THEMEPACKS_THEME_DESC_ZORINOS" xml:space="preserve">
     <value>ज़ोरिन ओएस से रंग योजनाएं, एक लोकप्रिय लिनक्स ऑपरेटिंग सिस्टम, उबंटू का एक अनौपचारिक स्पिनऑफ</value>
   </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_RASPBERRY" xml:space="preserve">
+    <value>रास्पबेरी रंग</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2021" xml:space="preserve">
+    <value>नाइट्रोसिड KS लोगो के रंग (2021-2022)</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2022" xml:space="preserve">
+    <value>नाइट्रोसिड KS लोगो के रंग (2022-2024)</value>
+  </data>
 
 </root>
