--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.it.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.it.resx
@@ -345,5 +345,14 @@
   <data name="NKS_THEMEPACKS_THEME_DESC_ZORINOS" xml:space="preserve">
     <value>Combinazioni di colori di Zorin OS, uno spin-off non ufficiale di un popolare sistema operativo Linux, Ubuntu</value>
   </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_RASPBERRY" xml:space="preserve">
+    <value>Colori lampone</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2021" xml:space="preserve">
+    <value>Colori del logo Nitrocid KS (2021-2022)</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2022" xml:space="preserve">
+    <value>Colori del logo Nitrocid KS (2022-2024)</value>
+  </data>
 
 </root>
