--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.pt-BR.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/Output/Localizations.pt-BR.resx
@@ -345,5 +345,14 @@
   <data name="NKS_THEMEPACKS_THEME_DESC_ZORINOS" xml:space="preserve">
     <value>Esquemas de cores do Zorin OS, um spinoff não oficial de um popular sistema operacional Linux, o Ubuntu</value>
   </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_RASPBERRY" xml:space="preserve">
+    <value>Cores framboesa</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2021" xml:space="preserve">
+    <value>Cores do logotipo do Nitrocid KS (2021-2022)</value>
+  </data>
+  <data name="NKS_THEMEPACKS_THEME_DESC_LEGACY2022" xml:space="preserve">
+    <value>Cores do logotipo do Nitrocid KS (2022-2024)</value>
+  </data>
 
 </root>
