--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/ltn.json
@@ -309,6 +309,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Color machinis ex Zorin OS, spinoff privatus systematis operantis Linux popularis, Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Colores rubi idaei"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Colores ex insignia Nitrocid KS (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Colores ex insignia Nitrocid KS (2022-2024)"
     }
   ]
 }
