--- a/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons/Nitrocid.ThemePacks/Resources/Languages/mal.json
@@ -312,6 +312,18 @@
     {
       "loc": "NKS_THEMEPACKS_THEME_DESC_ZORINOS",
       "text": "Skim warna daripada Zorin OS, spinoff tidak rasmi sistem pengendalian Linux yang popular, Ubuntu"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_RASPBERRY",
+      "text": "Warna Rasberi"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2021",
+      "text": "Warna daripada logo Nitrocid KS (2021-2022)"
+    },
+    {
+      "loc": "NKS_THEMEPACKS_THEME_DESC_LEGACY2022",
+      "text": "Warna daripada logo Nitrocid KS (2022-2024)"
     }
   ]
 }
